# draw-things-companion

./: .gitignore  APP_INIT_NOTES.md  APP_STARTUP_STEPS.md  APP_STATE.md  App_logic.md  CLAUDE.md  CLAUDE_NOTES.md  CLAUDE_TODO.md  CONTEXT.md  IMPLEMENTATION_SUMMARY.md  MEMORY_OBJECT.md  README.md  TAILWIND_MIGRATION_GUIDE.md  TASK_1_COMPLETE.md  TASK_1_PROGRESS.md  ToDo.md  backend_calls.md  biome.json  dora.excalidraw  env.sample  error_codes.md  functions_datasets_app_state.md  logging.md  mockup.html  package-lock.json  package.json  settings.json  test_setup.sh  tmp.json  z_2chDB_play.cjs  z_chDB_play.cjs  z_notes.txt  z_play.ipynb  z_test.js
_documentation/: Bug_Fixes_Summary.md  Claude_To_Do.md  DEVELOPMENT_README.md  Draw-Things-models-and-JSON.md  File_Management_Functionality.md  Frontend_Filtering_And_FK_Fix.md  GitHub_Model_Types_COMPLETE.md  GitHub_Model_Types_Implementation.md  Initialization_Flow_Fix.md  Model_Type_Detection_Fix.md  Tauri_Integration.md  Two-pane_react_module_spec.md  functional-requirements.md  how_to_get_file_info_in_rust.md  mockup.html  notes_for_AI_code_assistants.md  ui_design.excalidraw  verify_database.sql  vscode_recommendations.md
_old_documentation/: CLAUDE_TODO.md  File_Management_Functionality.md  Implementation_Summary_JSON_Parsing.md  filepath-mappings.md  functional-requirements.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  env_config.rs  file_ops.rs  first_run.rs  lib.rs  logger.rs  main.rs
src-tauri/src/db/: mod.rs  models.rs  operations.rs  schema.rs
(+118 files in other folders)
